force-app/main/default/objects/Krow__Krow_Metadata__c/Krow__Krow_Metadata__c.object-meta.xml
<CustomObject>
    <label>Klient Metadata</label>
    <nameField>
        <displayFormat>KM-{00000}</displayFormat>
        <label>Klient Metadata Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Klient Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>