force-app/main/default/objects/Krow__Krow_Metadata__c/fields/Krow__Action__c.field-meta.xml
<CustomField>
    <fullName>Krow__Action__c</fullName>
    <label>Action</label>
    <length>200</length>
    <type>Text</type>
</CustomField>