force-app/main/default/objects/Krow__Krow_Metadata__c/fields/Krow__Context_Data__c.field-meta.xml
<CustomField>
    <fullName>Krow__Context_Data__c</fullName>
    <label>Context Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>