force-app/main/default/objects/Krow__Krow_Metadata__c/fields/Krow__Context_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Context_Record_Id__c</fullName>
    <label>Context Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>