force-app/main/default/objects/Krow__Krow_Metadata__c/fields/Krow__New_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Krow__New_Record_ID__c</fullName>
    <label>New Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>